<resources>

    <string name="app_name">Popular Movies</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="now_playing_movies">Now Playing Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="toprated_movies">TopRated Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="airing_today_tv">Airing Today TV</string>
    <string name="on_the_air_tv">On The Air TV</string>
    <string name="popular_tv">Popular TV</string>
    <string name="toprated_tv">TopRated TV</string>
    <string name="popular_actors">Popular Actors</string>
    <string name="show_details_pop_up_menu_item">Show Details</string>
    <string name="show_reviews_pop_up_menu_item">Show reviews</string>
    <string name="show_cast_pop_up_menu_item">Show Cast</string>
    <string name="show_works_pop_up_menu_item">Show Works</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_homepage_label">HomePage</string>
    <string name="btn_imdb_label">IMDB</string>
    <string name="show_videos_pop_up_menu_item">Show Videos</string>

    <string-array name="search_type">
        <item>movie</item>
        <item>tv show</item>
        <item>actor</item>
    </string-array>
</resources>
